fix timeline on mobile

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -33,6 +33,9 @@
     //height: 110px;
     max-width: 100%;
 }
+.timeline-card {
+    max-width: 275px;
+}
 /* subjects */
 .tagcloud0{font-size:0.4em;}
 .tagcloud1{font-size:0.5em;}
